--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Base</title>
@@ -8,11 +9,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 
   <div class="footer">
 
+    <div id="contactDiv" class="footerDiv">Contactez nous</div>
+
+    <div id="categorieDiv" class="footerDiv">
+
+      Categories
+
+    </div>
+
+    <div id="suivieDiv" class="footerDiv">
+
+      Suivez-nous
+      <br/>
+      <img src="assets/images/facebook.png" width="10%" hspace="5" />
+      <img src="assets/images/twitter.png" width="10%" />
+      <br/>
+      <img src="assets/images/snapchat.png" width="12%" hspace="5"/>
+      <img src="assets/images/insta.png" width="10%" />
+      
+    </div>
+    <div id="iconicDiv" class="footerDiv">
+      <img src="assets/images/cb1.jpg" width="13%" />
+      <img src="assets/images/visa.png" width="18%" />
+
+      <img src="assets/images/master.png" width="15%" />
+      <img src="assets/images/truck.png" width="52%" />
+    </div>
   </div>
 </body>
 
